--- a/KnockKnock-Info.plist
+++ b/KnockKnock-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>icon</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.lucasderraugh.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.objective-see.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
